<resources>
    <string name="app_name">U-Glow</string>
    <string name="facebook_app_id">1008664433212535</string>
    <string name="fb_login_protocol_scheme">fb1008664433212535</string>
    <string name="get_the_glow">Get the Glow</string>
    <string name="the_verdict">The Verdict</string>
    <string name="check_out_glows">Check out the Glows</string>
    <string name="sample_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="booking">BOOKINGS</string>
    <string name="open_glow">OPEN GLOW</string>
    <string name="setting">SETTINGS</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_offers">Offers</string>
    <string name="nav_contact">Contact</string>
    <string name="nav_bookings">Bookings</string>
    <string name="nav_about">About</string>
    <string name="nav_faq">FAQ</string>
    <string name="nav_privacy">Privacy</string>
    <string name="post_a_glow">Post a Glow</string>
    <string name="pick_category">Pick a Category to post a glow</string>
    <string name="see_all_categories">See All Categories</string>
    <string name="want_repost">Want to repost a Glow?</string>
    <string name="click_previous_glow">Click below to see your previous glows</string>
    <string name="go_to_glow_listing">Go to glow listing</string>
    <string name="view_open_bookings">View open bookings</string>
    <string name="upcoming_booked_glow">Your upcoming booked glows</string>
    <string name="label_location">Location:</string>
    <string name="label_budget">Budget:</string>
    <string name="view_task">View Task</string>
    <string name="messages">Messages</string>
    <string name="glow_history">Glow History</string>
    <string name="search">Search</string>
    <string name="who_is_this_for">Who is this for?</string>
    <string name="let_us_know_who_will_be_there">Let us know who will be there</string>
    <string name="just_me">Just me</string>
    <string name="a_group">A group</string>
    <string name="how_many_people_are_in_the_group">How many people are in the group?</string>
    <string name="pick_a_category">Pick a category</string>
    <string name="choose_below_start">Choose from the below to get started</string>
    <string name="june_earnings">June earnings</string>
    <string name="dummy_amount">€260</string>
    <string name="next_payout"><u>Next Payout: 01/02/20</u></string>
    <string name="your_profile">Your\nProfile</string>
    <string name="notifications">Notifications</string>
    <string name="dummy_text">Lorem ipsum ut labore et dolore ma dolor sit amet, conse ctetur adipiscing elit, sed do eiusmod tempor incididunt ut labornt.</string>
    <string name="dummy_heading">Booking Confirmed</string>
    <string name="see_all">See All</string>
    <string name="see_overview_upcoming_bookings">See an overview of your upcoming bookings</string>
    <string name="open_tasks">Open\nTasks</string>
    <string name="analytics">Analytics</string>
    <string name="earnings">Earnings</string>
    <string name="settings">Settings</string>
    <string name="your_bookings">Your\nBookings</string>
    <string name="complete_your_profile">Complete Your Profile</string>
    <string name="complete_profile_bid">Click <u>here</u> to complete your profile to bid on glows.</string>
    <string name="enter_details">Enter your details below</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="mobile_email">Mobile No/Email</string>
    <string name="password">Password</string>
    <string name="edtMobile">0872435913</string>
    <string name="hint_password">Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="apple_sign_in">Sign in with Apple ID</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="select_option">Please select an option</string>
    <string name="step_one">Step 1</string>
    <string name="complete">Complete</string>
    <string name="step_two">Step 2</string>
    <string name="name">Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="your_name">YOUR NAME</string>
    <string name="your_phone_no">YOUR PHONE NO</string>
    <string name="email_id">Email ID</string>
    <string name="your_email">YOUR EMAIL</string>
    <string name="im_customer">I\'m a Customer</string>
    <string name="im_pro">I\'m a\nPro</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="caps_confirm_password">CONFIRM PASSWORD</string>
    <string name="caps_password">PASSWORD</string>
    <string name="where_did_you_hear">Where did you hear about us?</string>
    <string name="online">ONLINE</string>
    <string name="main_street">123 Main Street...</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_account_setup">Your account is now setup</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="btnNext">Next</string>
    <string name="btnSkip">Skip</string>
    <string name="business_name">Business Name</string>
    <string name="your_business_name">YOUR BUSINESS NAME</string>
    <string name="what_do_you_need">What do you need?</string>
    <string name="help_us_narrow">Help us narrow down your search</string>
    <string name="heading_your_open_bookings">Your open bookings</string>
    <string name="check_out_glows_below">Check out your glows below.</string>
    <string name="open">Open</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="load_more">Load More</string>
    <string name="post_a_new_glow">Post a new glow</string>
    <string name="flexible">Flexible</string>
    <string name="details">Details</string>
    <string name="view_gallery">View Gallery</string>
    <string name="edit_details">Edit Details</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="heading_open_glows">Open Glows</string>
    <string name="see_latest_posted_glow">See the latest posted glows</string>
    <string name="make_offer">Make Offer</string>
    <string name="budget_200">BUDGET: $200</string>
    <string name="inspiration">Inspiration</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_offer_amount">Enter Offer Amount</string>
    <string name="ask_question">Ask a question</string>
    <string name="heading_forgot_your_password">Forgot your Password?</string>
    <string name="enter_your_email_below">Enter your email below to reset</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send">Send</string>
    <string name="enter_one_time_password">Enter One Time Password</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="resend">Re-Send</string>
    <string name="your_settings">Your Settings</string>
    <string name="dont_forget_settings">Don’t forget to go to settings to add your bank details and working details.</string>
    <string name="close">Close</string>
    <string name="you_have_made_offer">You have just made an offer.</string>
    <string name="filters">Filters</string>
    <string name="one_km">1KM</string>
    <string name="hundred_km">100KM</string>
    <string name="day">Day</string>
    <string name="time">Time</string>
    <string name="budget">Budget</string>
    <string name="one_euro">€1</string>
    <string name="hundred_euro">€100</string>
    <string name="service">Service</string>
    <string-array name="custom_weekdays">
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
        <item>S</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_your_glow">Select your Glow</string>
    <string name="pick_what_you_need">Pick what you need</string>
    <string name="not_what_you_looking">Can’t find what you’re\nlooking for?</string>
    <string name="click_button_below">Click the button below to add\nadditional glows to this booking</string>
    <string name="post_your_track">Once you have finished selected all your\nglows click next to post your task</string>
    <string name="the_details">The Details</string>
    <string name="further_details">Please enter any further details on\nwhat you need.</string>
    <string name="what_your_looking_for">Please upload images (if any) of\nwhat you are looking for.</string>
    <string name="upload_images">Upload Images</string>
    <string name="what_is_your_budget">What is your budget?</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="what_date_and_time">What date and time?</string>
    <string name="anytime">Anytime</string>
    <string name="are_you_flexible">Are you flexible with this time? </string>
    <string name="on_this_day">On this Day</string>
    <string name="default_address">Use your default address</string>
    <string name="enter_address">Enter first line of your address</string>
    <string name="enter_manually">Or Enter Manually</string>
    <string name="next">Next</string>
    <string name="what_is_your_address">What is your address?</string>
    <string name="eyebrow_wax">Eyebrow Wax</string>
    <string name="need_anything_else">Need anything else?</string>
    <string name="enter_details_you_want">Enter details of what you want.</string>
    <string name="add_service">Add services to this booking</string>
    <string-array name="select_time">
        <item>YES</item>
        <item>NO</item>
    </string-array>
    <string name="notify">Notifications</string>
    <string name="notification_desc">Lorem ipsum ut labore et dolore ma dolor sit amet, conse ctetur adipiscing elit, sed do eiusmod tempor incididunt ut labornt.</string>
    <string name="notification_title">Leave a Review</string>
    <string name="single_char">R</string>
    <string name="cong">Congratulations!</string>
    <string name="yur_glow_posted">Your glow has been posted!</string>
    <string name="task_sent">Your task has been sent to suppliers in\nyour area.</string>
    <string name="you_will_receive_notification">When a supplier applies for your task,\nyou will receive a notification.</string>
    <string name="can_view_offers">you can view offers and questions \nregarding your glow in the <u><b>glow listing.</b></u></string>
    <string name="post_another_glow">Would you like to\npost another Glow?</string>
    <string name="yes_please">yes please</string>
    <string name="no_all_done">No, ALL DONE</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="date">Mon 12/12/2020</string>
    <string name="_2pm">2PM</string>
    <string name="numbers">123432504</string>
    <string name="_260">€260</string>
    <string name="booking_to_calendar">ADD BOOKING\nTO CALENDAR</string>
    <string name="offer_decline">Your offer has been\ndeclined</string>
    <string name="_date">12/02/20021</string>
    <string name="another_offer">Make Another Offer</string>
    <string name="updated_details">UPDATE DETAILS</string>
    <string name="post_glow">Post a Glow</string>
    <string name="settingSmall">Settings</string>
    <string name="whatYouNeed">"Please enter any further details on\nwhat you need."</string>
    <string name="address">Address</string>
    <string name="item_is_already_added">Item is already added</string>
    <string name="remove_added_item">Remove added item</string>
    <string name="add_more_item" >Add more item</string>
</resources>