<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboard"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"/>
    <item
        android:id="@+id/booking"
        android:enabled="true"
        android:icon="@drawable/ic_booking"
        android:title="@string/booking"/>

    <item
        android:id="@+id/openGlow"
        android:enabled="true"
        android:title="@string/open_glow" />

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification"/>


</menu>