<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeading"
        style="@style/Text.Regular.Large.Black.Brown"
        android:layout_width="@dimen/standard_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/enter_details"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddress"
        style="@style/Text.Regular.Large.Black.Brown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etAddress"
        style="@style/Text.Regular.Medium.Black.Brown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textBlack"
        android:drawableEnd="@drawable/ic_home"
        android:hint="@string/main_street"
        android:drawablePadding="@dimen/_8sdp"
        android:paddingBottom="@dimen/_16sdp"
        android:paddingEnd="@dimen/_4sdp"
        android:paddingStart="@dimen/standard_0"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>