<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingBottom="@dimen/_24sdp"
    android:background="@drawable/bg_rectangle_curve_green_fill"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="@dimen/standard_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tvHeading"
        android:text="@string/heading_forgot_your_password"
        style="@style/Text.Bold.xLarge.White.Brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="@dimen/standard_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tvEnterEmail"
        android:text="@string/enter_your_email_below"
        style="@style/Text.Regular.Large.White.Brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/Text.Regular.Medium.Black.Brown"
        android:layout_width="@dimen/standard_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/bg_rectangle_curve_white_fill"
        android:singleLine="true"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/textBlack"
        android:layout_marginTop="@dimen/_24sdp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/CurvedButton"
        android:background="@drawable/bg_white_curved_fill"
        android:layout_marginTop="@dimen/_24sdp"
        android:textColor="@color/green"
        android:text="@string/send"
        android:id="@+id/btnSend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginHorizontal="@dimen/_16sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/CurvedButton"
        android:background="@drawable/bg_white_curved_outline"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/done"
        android:id="@+id/btnDone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSend"
        android:layout_marginHorizontal="@dimen/_16sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>